--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,16 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.0.0",
+        "ext-iconv": "*",
         "diablomedia/zendframework1-exception": "^1.0.0"
     },
     "autoload": {
         "psr-0": {
-            "Zend_": "src/"
-        }
+            "Zend_Mime_": "src/"
+        },
+        "classmap": [
+            "src/Zend/Mime.php"
+        ]
     },
     "autoload-dev": {
         "psr-0": {
@@ -26,14 +30,18 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
-        "phpstan/phpstan": "^0.9.2"
+        "phpstan/phpstan": "^0.9.2",
+        "friendsofphp/php-cs-fixer": "^2.11",
+        "maglnet/composer-require-checker": "^0.1.6 | ^0.2.1",
+        "phpro/grumphp": "^0.14.0"
     },
     "archive": {
         "exclude": ["/tests"]
     },
     "scripts": {
-        "test": "phpunit ./tests",
-        "test-with-coverage": "phpunit --coverage-clover=clover.xml ./tests",
-        "phpstan": "phpstan analyze -l7 -c phpstan.neon --no-progress ./src ./tests --ansi"
+        "test": "phpunit",
+        "test-with-coverage": "phpunit --coverage-clover=clover.xml",
+        "phpstan": "phpstan analyze -l7 -c phpstan.neon --no-progress ./ --ansi",
+        "style-check": "php-cs-fixer fix --dry-run -vv"
     }
 }
