--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,6 @@
 parameters:
+    excludes_analyse:
+        - %rootDir%/../../../vendor/*
     ignoreErrors:
         # $parts could be null here, so should probably be validated beforehand (or method should return empty array instead of null)
         # Zend_Mime_Message:254
