testing against php 7.4 final, locking dev deps, fixing/ignoring phpstan errors

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,7 @@
 parameters:
-    level: 7
-    paths: 
+    checkMissingIterableValueType: false
+    level: 8
+    paths:
         - ./
     excludes_analyse:
         - %rootDir%/../../../vendor/*
@@ -9,5 +10,5 @@ parameters:
         # Zend_Mime_Message:254
         - '#Argument of an invalid type array\|null supplied for foreach, only iterables are supported\.#'
         -
-            message: '#Parameter \#1 \$headers of function iconv_mime_decode_headers expects string, string\|null given\.#'
-            path: %currentWorkingDirectory%/src/Zend/Mime/Decode.php
+            message: '#Cannot access offset 0 on string\|false\.#'
+            path: './src/Zend/Mime/Decode.php'
