--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,5 +10,5 @@ parameters:
         # Zend_Mime_Message:254
         - '#Argument of an invalid type array\|null supplied for foreach, only iterables are supported\.#'
         -
-            message: '#Cannot access offset 0 on string\|false\.#'
+            message: '#Cannot access offset 0 on non-empty-string\|false\.#'
             path: './src/Zend/Mime/Decode.php'
