FraGoTe Composer Package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "diablomedia/zendframework1-mime",
+    "name": "fragotesac/zf1-mime",
     "description": "Zend Framework 1 Mime component",
     "type": "library",
     "keywords": [
